Resolução dos exercícios propostos

--- a/exercicio3/sugestao.html
+++ b/exercicio3/sugestao.html
@@ -10,17 +10,33 @@
 </head>
 
 <body>
-    <div class="a">
+    <header class="a">
         <h1><a href="./index.html">Simulador de Climas</a></h1>
-    </div>
-    <div class="b">
-        <div class="c">
+    </header>
+    <main class="b">
+        <section class="c">
+            <form action="#">
+                <label for="name">Nome:</label>
+                <input type="text" name="name" id="name">
+                <br><br>
+                <label for="email">E-Mail:</label>
+                <input type="email" name="email" id="email">
+                <br><br>
+                <label for="sugestaodeclima">Sugestão de Clima</label>
+                <input type="text" name="sugestaodeclima" id="sugestaodeclima">
 
-<!-- Seu formukário aqui!-->
-        </div>
+                <button type="submit">Enviar</button>
 
-    </div>
-    <div class="e">Footer</div>
+
+
+            </form>
+
+
+
+        </section>
+
+    </main>
+    <footer class="e">Footer</footer>
 
 </body>
 
